# ai-stock-trend-following-system

./: .gitignore  README.md  check_environment.py  pyproject.toml  requirements.txt  run.py  run_backtest.py  run_daily.py  run_replay.py
docs/: DAILY_SOP.md  IMPLEMENTATION_STATUS.md
outputs/: backtest_metrics.json  data_quality_report.json  latest_signal.json  latest_signal.txt  paper_replay_2y.json  paper_replay_2y_daily.csv  paper_replay_2y_trades.csv  research_summary.json
scripts/: setup_windows.ps1
src/ai_market_regime/: __init__.py  alignment.py  backtest.py  china_data.py  choice_data.py  config.py  data.py  environment.py  paper.py  pipeline.py  replay.py  reporting.py  research.py  scoring.py  stock_scoring.py
tests/: test_scoring.py
