[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-stock-trend-following-system"
version = "0.1.0"
description = "AI industry market-regime scoring and position-sizing system"
requires-python = ">=3.10"
dependencies = [
  "yfinance>=0.2.54,<2",
  "pandas>=2.1,<3",
  "numpy>=1.26,<2",
  "matplotlib>=3.8,<4",
  "requests>=2.31,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
